--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ padding: 0;
 }
 header{
     padding: 85px 120px;
-    border: 1px solid blue;
+   
     margin-left: 120px;
     margin-right: 120px;
 
@@ -104,3 +104,72 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 }
+main{
+    width: 1200px;
+    margin: 0 auto;
+}
+.content-title{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+font-feature-settings: 'clig' off, 'liga' off;
+    font-weight: 600;
+line-height: 70px;
+    width: 260px;
+    height: 70px;
+    font-size: 28px;
+}
+.image-container{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+   
+    margin-top: 100px;
+    width: 1440px;
+height: 880x;
+}
+.img1{
+    width: 300px;
+height: 256px;
+border-radius: 5px;
+margin-left: auto;
+margin-right: auto;
+display: block;
+
+}
+.imgs{
+    position: relative;
+    padding-left: 120px;
+    padding-bottom: 30px;;
+    gap: 30px;
+    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(3, 3fr);
+}
+.img-des{
+   padding: 30px;
+    width: 300px;
+height: 176px;
+padding: 17px 15px 230px 15px;
+border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+align-items: center;
+justify-content: center;
+}
+.sponsors-img-container{
+    
+    width: 1440px;
+height: 70px;
+margin-top: 50px;
+display: flex;
+
+gap: 65px;
+}
+.img2{
+    width: 100px;
+height: 28px;
+margin-top: 20px;
+}
+
