--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ padding: 0;
     color: #3A3A3A;
 }
 header{
-    padding: 85px 120px;
+    padding: 85px 132px 85px 120px ;
    
     margin-left: 120px;
     margin-right: 120px;
 
 }
-nav{
+.nav{
+    gap: 30px;
     display: flex;
     justify-content: space-between;
 }
@@ -121,12 +122,9 @@ line-height: 70px;
     font-size: 28px;
 }
 .image-container{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-   
-    margin-top: 100px;
-    width: 1440px;
+
+margin-top: 100px;
+width: 1440px;
 height: 880x;
 }
 .img1{
@@ -135,36 +133,38 @@ height: 256px;
 border-radius: 5px;
 margin-left: auto;
 margin-right: auto;
-display: block;
+object-fit: cover;
 
 }
 .imgs{
-    position: relative;
-    padding-left: 120px;
+
+   
+margin: 0;
     padding-bottom: 30px;;
-    gap: 30px;
-    justify-content: space-around;
+    gap: 20px;
+    margin-right: 0;
     display: grid;
     grid-template-columns: repeat(3, 3fr);
 }
 .img-des{
-   padding: 30px;
-    width: 300px;
+/* padding: 30px; */
+
 height: 176px;
 padding: 17px 15px 230px 15px;
 border-radius: 5px;
 background: #FFF;
 box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
-align-items: center;
-justify-content: center;
+/* align-items: center;
+justify-content: center; */
+text-align: center;
 }
 .sponsors-img-container{
-    
-    width: 1440px;
+    /* border: 1px solid red; */
+width: 1440px;
 height: 70px;
 margin-top: 50px;
 display: flex;
-
+padding-left: 120px;
 gap: 65px;
 }
 .img2{
@@ -172,4 +172,120 @@ gap: 65px;
 height: 28px;
 margin-top: 20px;
 }
+.See{
+    gap: 2px;
+    width: 1440px;
+    display: flex;
+    justify-content: end;
+    font-weight: 700;
+    color: rgba(224, 44, 109, 0.87);
+    font-size: 16px;
+font-feature-settings: 'clig' off, 'liga' off;
+}
+.featured{
+    display: flex;
+  
+    width: 1440px;
+    gap: 100px;
+}
+.gear{
+    width: 404px;
+    height: 270px;
+    border-radius: 7px;
+}
+.feature-heading{
+    color: #0A0826;
 
+font-feature-settings: 'clig' off, 'liga' off;
+font-family: Poppins;
+font-size: 38px;
+font-weight: 700;
+line-height: 60px;
+margin-top: 10px;
+margin-bottom: 10px;
+}
+.gear-para{
+    width: 501px;
+height: 88px;
+color: #6C6C6C;
+
+font-feature-settings: 'clig' off, 'liga' off;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: 28px;
+}
+.join{
+    display:inline-flex;
+    padding: 10px 24px;
+align-items: flex-start;
+
+background: #E02C6D;
+margin-top: 30px;
+}
+.join p{
+    color: #FFF;
+font-feature-settings: 'clig' off, 'liga' off;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.arrow{
+    width: 24px;
+height: 24px;
+color:white;
+} 
+footer{
+   
+    width: 100%;
+height: 239px;
+background: #0A0826;
+margin-top: 100px;
+}
+.footer-heading{
+    color: #FFF;
+font-feature-settings: 'clig' off, 'liga' off;
+font-family: Poppins;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-align: center;
+padding-top: 50px;
+}
+.copy{
+    color: var(--Text-Gray-300, #D9DBE1);
+font-feature-settings: 'liga' off;
+font-family: Manrope;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: 24px; /* 171.429% */
+text-align: center;
+}
+.social{
+    margin-left: auto;
+    margin-left: auto;
+    text-align: center;
+    margin-top: 17px;
+}
+@media screen and (max-width: 576px) {
+    .imgs{
+        flex-direction: column;
+       grid-template-columns: repeat(2, 1fr)
+    }
+    .nav{
+        width: 100%;
+        /* justify-content: space-evenly; */
+        gap: 30px;
+        flex-direction: column;
+        /* text-align: center; */
+      font-size: 64px;margin: 0;
+    }
+    header{
+padding: 20px;
+    }
+}
